<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/test1"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_test1"/>

    <item
        android:id="@+id/test2"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_test2" />

    <item
        android:id="@+id/test3"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_test3" />

    <item
        android:id="@+id/test4"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_test4" />

    <item
        android:id="@+id/test5"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_test5"/>
</menu>